--- a/participation/index.html
+++ b/participation/index.html
@@ -73,7 +73,7 @@
       <h2 id="introduction">Introduction</h2>
 
       <p>
-        Describe the activity or session outline here.
+        Desc the activity or session outline here.
       </p>
       <p>
         It is sometimes best to practice
