--- a/participation/index.html
+++ b/participation/index.html
@@ -36,7 +36,7 @@
       </div>
 
 
-      <h1>TITLE OF YOUR SESSION</h1>
+      <h1>Participatory Action Research</h1>
 
       <div class="meta-information">
         <p class="summary">
