--- a/participation/index.html
+++ b/participation/index.html
@@ -87,7 +87,7 @@
         <li>
           <h1>Background / Planning</h1>
           <p>
-            Present some background information to support your session, replace this text with whatever links and resources you might need.
+            Participatory Action Research  some background information to support your session, replace this text with whatever links and resources you might need.
           </p>
         </li>
 
