--- a/participation/index.html
+++ b/participation/index.html
@@ -73,7 +73,7 @@
       <h2 id="introduction">Introduction</h2>
 
       <p>
-        Desc the activity or session outline here.
+        This is a conversation about People, Power, and Knowledge.
       </p>
       <p>
         It is sometimes best to practice
