--- a/participation/index.html
+++ b/participation/index.html
@@ -1,152 +1,61 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Participatory OF YOUR SESSION</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Fira+Sans:400,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="icon" type="image/ico" href="https://mozillascience.org/img/favicon.ico">
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>PAR.md</title><style></style></head><body id="preview">
+<h1><a id="Power_to_the_People_0"></a>Power to the People!</h1>
+<h1><a id="Participatory_Action_Research___affectionately_called_PAR_3__2"></a>Participatory Action Research - <em>affectionately called PAR &lt;3</em></h1>
+<h1><a id="Introduction_4"></a>Introduction</h1>
+<p>This conversation is about <strong><em>knowledge</em></strong>, <strong><em>power</em></strong>, and <strong><em>people</em></strong>!</p>
+<p>Also called Action Research, Engaged research, Practitioner Research or Practitioner-led or based research. *There are some subtle difference between these terms, but the most important thing is that they share the same idea of solving a social problem with participatory observation of the daily activities of people&quot;</p>
+<h1><a id="Background_10"></a>Background</h1>
+<ul>
+<li><em>PAR was born out of frustration with classical scientific methods and the process of knowledge creation</em> (Notes - Disregard for local knowledge)</li>
+<li><em>According to PAR practitioners, the classical scientific method is an elitist model and the research is the subject being studied by the object (Babbie).</em> (In a space where we are trying to deal with social justice issues, it makes it difficult to go with a preconceived idea of what the interaction with the “subject” is going to be&quot;</li>
+</ul>
+<h1><a id="Definitions_14"></a>Definitions</h1>
+<h1><a id="1_15"></a>1</h1>
+<p><em>“PAR is an approach to social research in which the <strong>people</strong> being studied are given <strong>control</strong> over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study”</em> (Babbie page 313)</p>
+<h1><a id="2_18"></a>2</h1>
+<p>M. E. Torre defines PAR as “a framework for creating knowledge<br>
+that is rooted in the belief that the most impacted by the research should take the lead in framing the questions, design, methods, analysis and determining what products and actions might be the most useful in affecting change”. Torre, M. E. 2009. ‘Participatory Action Research and Critical Race Theory: Fueling Spaces for Nos-otras to Research’ Urban Review 41(1):</p>
+<h1><a id="3_22"></a>3</h1>
+<p><em>What this research tradition provides is a shared commitment to fundamentally disrupt conventional hierarchies of <strong>knowledge production</strong>: <strong>who decides on the questions to ask</strong>, <strong>how to ask them, and how to theories the world</strong>. (Geraldine Pratt in collaboration with the Philippine Women Centre of BC and Ugnayan Kabataany Pilipino sa Canada/Filipino- Canadian Youth Alliance, 2007)</em></p>
+<h1><a id="The_Minimums_25"></a>The Minimums</h1>
+<ul>
+<li>A democratic setting - social and political conditions</li>
+<li>A Safe Space - continious mediation process</li>
+<li>Trust</li>
+<li>Identities - Core/Periphery Visible/invisible- who joins the group?</li>
+<li>Who sets the agenda? To what extent do the partners contorl the agenda?</li>
+<li>Change - all partners must be willing to change and aquire new skills</li>
+<li>The role of the researcher/scientist is to be an advisor and a partner</li>
+<li>Reflection</li>
+<li>
+<ul>
+<li>Personal Reflection</li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Epistemological Reflection</li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Relfection on the research process</li>
+</ul>
+</li>
+<li>
+<ul>
+<li>Reflection on the structural limitation - social/political</li>
+</ul>
+</li>
+</ul>
+<h1><a id="Method_of_Data_Collection_39"></a>Method of Data Collection</h1>
+<ul>
+<li>The data is informed by the daily experience of process and the research topic</li>
+<li>It can range from interviews and focus group, questionnairs, photography projects, artistic work, music,</li>
+</ul>
+<h1><a id="The_Output_42"></a>The Output</h1>
+<ul>
+<li>The result can be in the form of artisitic work, music, photography work, creative writings, reports…whatever fits the group</li>
+</ul>
 
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../assets/javascript/script.js" type="text/javascript" charset="utf-8"></script>
-  </head>
-
-  <body>
-    <aside>
-      <div class="logo">
-        <a href="https://mozillafoundation.github.io/2017-fellows-sf/" title="SF Workweek Homepage">
-          <img src="../assets/images/science-fox_naranja.svg" />
-        </a>
-      </div>
-      <nav>
-        <a class="selected" href="#introduction">Introduction</a>
-        <a href="#steps-to-complete">Steps to Complete</a>
-        <a href="#glossary">Glossary</a>
-        <a href="#resources">Resources</a>
-      </nav>
-    </aside>
-
-    <article>
-      <div class="logo">
-        <a href="https://mozillascience.org" title="Mozilla Science Lab">
-          <img src="../assets/images/science-lab-logo.svg" />
-        </a>
-      </div>
-
-
-      <h1>Participatory Action Research</h1>
-
-      <div class="meta-information">
-        <p class="summary">
-          Summary of what the activity is about.
-        </p>
-        <div class="details">
-          <time>90 minutes</time>
-          <p class="difficulty">For beginners</p>
-        </div>
-      </div>
-
-      <section class="presentation-details">
-        <section>
-          <h4>Format</h4>
-          <p>
-            This exercise works well as an in-person workshop or an online exercise.
-            It can be done individually or in a group.
-          </p>
-        </section>
-        <section>
-          <h4>Materials</h4>
-          <ul>
-            <li>
-              Pen/pencil &amp; paper
-            </li>
-            <li>
-              Collaborative document editor like
-              Etherpad or Google Docs
-            </li>
-          </ul>
-        </section>
-      </section>
-
-      <h2 id="introduction">Introduction</h2>
-
-      <p>
-        This is a conversation about People, Power, and Knowledge.
-      </p>
-      <p>
-        It is sometimes best to practice
-        building a markdown file in an offline program like <a href="http://25.io/mou/">Mou</a>
-        or an online one like <a href="http://dillinger.io/">Dilliger</a> before you post it online.
-      </p>
-
-      <h2 id="steps-to-complete">Steps to Complete</h2>
-      <ol class="steps">
-        <!-- Step 1 -->
-        <li>
-          <h1>Background / Planning</h1>
-          <p>
-            Participatory Action Research  some background information to support your session, replace this text with whatever links and resources you might need.
-          </p>
-        </li>
-
-        <!-- Step 2 -->
-        <li>
-          <h1>Create a Resource</h1>
-          <!-- you can add tim limitations to each step with the notation below -->
-          <!-- <time>3 minutes each</time> -->
-          <p>
-            Provide some paragraph instructions on creating a resource or materials or notes that apply the backgroun you provided to other projects; if you have several projects, consider adopting a template "project structure"
-            that is consistent across projects, take a look at this <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
-          </p>
-        </li>
-
-        <!-- Step 3 -->
-        <li>
-          <h1>Make Supporting Materials</h1>
-          <!-- <time>30 minutes</time> -->
-          <p>
-            <strong>Make a THING</strong>: Provide instructions for whatever is needed to make supporting materials or a more polished version of the draft in step 2
-          </p>
-        </li>
-      </ol>
-
-      <h2 id="glossary">Glossary</h2>
-      <section class="glossary">
-        <section class="term">
-          <h3>Term-to-Define</h3>
-          <p>Some definition of that term.</p>
-        </section>
-        <section class="term">
-          <h3>Term-to-Define-2</h3>
-          <p>Some definition of another term.</p>
-        </section>
-      </section>
-
-      <h2 id="resources">Follow-up Resources &amp; Materials</h2>
-      <ul>
-        <li>
-          <a href="https://public.etherpad-mozilla.org/p/2017-sf-workweek-berhan">Etherpad for this session</a>
-        </li>
-        <li>
-          <a href="">Some other resource</a>
-        </li>
-      </ul>
-
-      <h2>Credits &amp; Attribution</h2>
-      <p>This is any kudos or contributions you'd like to acknowledge</p>
-
-      <!--
-      <section class="resources">
-        <section class="resource">
-          <h4>Resource Name</h4>
-          <a href="#">http://link.to/resource</a>
-          <p>This is a description of the resource. Summarizes what it is, you know?</p>
-        </section>
-      </section>
-      -->
-
-    </article>
-  </body>
-</html>
+</body></html>
