--- a/participation/index.html
+++ b/participation/index.html
@@ -40,7 +40,7 @@
 
       <div class="meta-information">
         <p class="summary">
-          Summary of what the activity is about.
+          This conversation is about knowledge, power, and people!
         </p>
         <div class="details">
           <time>90 minutes</time>
