--- a/participation/index.html
+++ b/participation/index.html
@@ -36,11 +36,11 @@
       </div>
 
 
-      <h1>Participatory Action Research</h1>
+      <h1>Participatory Action Research - PAR</h1>
 
       <div class="meta-information">
         <p class="summary">
-          This conversation is about knowledge, power, and people!
+          Power to the People!
         </p>
         <div class="details">
           <time>90 minutes</time>
@@ -50,10 +50,9 @@
 
       <section class="presentation-details">
         <section>
-          <h4>Format</h4>
+          <h4>This conversation is about knowledge, power, and people</h4>
           <p>
-            This exercise works well as an in-person workshop or an online exercise.
-            It can be done individually or in a group.
+            This conversation is about knowledge, power, and people.
           </p>
         </section>
         <section>
