--- a/participation/index.html
+++ b/participation/index.html
@@ -50,7 +50,7 @@
 
       <section class="presentation-details">
         <section>
-          <h4>This conversation is about knowledge, power, and people</h4>
+          <h4>This conversation is about **_knowledge_**, **_power_**, and **_people_**!</h4>
         </section>
         <section>
           <h4>Materials</h4>
