--- a/participation/index.html
+++ b/participation/index.html
@@ -50,7 +50,7 @@
 
       <section class="presentation-details">
         <section>
-          <h4>This conversation is about **_knowledge_**, **_power_**, and **_people_**!</h4>
+          <h4>This conversation is about knowledge, power, and people!</h4>
         </section>
         <section>
           <h4>Materials</h4>
@@ -83,7 +83,7 @@
         <li>
           <h1>Background / Planning</h1>
           <p>
-            Participatory Action Research  some background information to support your session, replace this text with whatever links and resources you might need.
+            PAR was born out of furstration PAR was born out of frustration with classical scientific methods and the process of knowledge creation.
           </p>
         </li>
 
@@ -93,8 +93,7 @@
           <!-- you can add tim limitations to each step with the notation below -->
           <!-- <time>3 minutes each</time> -->
           <p>
-            Provide some paragraph instructions on creating a resource or materials or notes that apply the backgroun you provided to other projects; if you have several projects, consider adopting a template "project structure"
-            that is consistent across projects, take a look at this <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
+            According to PAR practitioners, the classical scientific method is an elitist model and the research is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
           </p>
         </li>
 
