--- a/participation/index.html
+++ b/participation/index.html
@@ -81,26 +81,57 @@
       <ol class="steps">
         <!-- Step 1 -->
         <li>
-          <h1>Background / Planning</h1>
+          <h1>Background</h1>
           <p>
             PAR was born out of furstration PAR was born out of frustration with classical scientific methods and the process of knowledge creation.
+            According to PAR practitioners, the classical scientific method is an elitist model and the r
           </p>
         </li>
 
         <!-- Step 2 -->
         <li>
-          <h1>Create a Resource</h1>
+          <h1>Definitions</h1>
           <!-- you can add tim limitations to each step with the notation below -->
           <!-- <time>3 minutes each</time> -->
           <p>
-            According to PAR practitioners, the classical scientific method is an elitist model and the research is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
+            “PAR is an approach to social research in which the people being studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313)h is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
+          </p>
+          <p>
+            PAR is also defined as “a framework for creating knowledge that is rooted in the belief that the most impacted by the research should take the lead in framing the questions, design, methods, analysis and determining what products and actions might be the most useful in affecting change”. Torre, M. E. 2009. ‘Participatory Action Research and Critical Race Theory: Fueling Spaces for Nos-otras to Research’ Urban Review 41(1): studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313)h is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
           </p>
         </li>
 
         <!-- Step 3 -->
         <li>
-          <h1>Make Supporting Materials</h1>
+          <h1>Practicing PAR - the mimimums</h1>
           <!-- <time>30 minutes</time> -->
+          <ul>
+            <li>
+              A democratic setting - social and political conditions 
+            </li>
+            <li>
+              A Safe Space - it's a continious negotiation process 
+            </li>
+            <li>
+              Who joins the group? 
+            </li>
+            <li>
+              Who sets the agenda? 
+            </li>
+            <li>
+              PAR is not a static process  
+            </li>
+             <li>
+              The role of the researcher/scientist is to be an advisor and a partner 
+            </li>
+             <li>
+              Reflection 
+               - Personal 
+               - Epistemological 
+               - Research Process 
+               - Structural Limitations 
+            </li>
+          </ul>
           <p>
             <strong>Make a THING</strong>: Provide instructions for whatever is needed to make supporting materials or a more polished version of the draft in step 2
           </p>
