--- a/participation/index.html
+++ b/participation/index.html
@@ -94,10 +94,10 @@
           <!-- you can add tim limitations to each step with the notation below -->
           <!-- <time>3 minutes each</time> -->
           <p>
-            “PAR is an approach to social research in which the people being studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313)h is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
+            “PAR is an approach to social research in which the people being studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313).
           </p>
           <p>
-            PAR is also defined as “a framework for creating knowledge that is rooted in the belief that the most impacted by the research should take the lead in framing the questions, design, methods, analysis and determining what products and actions might be the most useful in affecting change”. Torre, M. E. 2009. ‘Participatory Action Research and Critical Race Theory: Fueling Spaces for Nos-otras to Research’ Urban Review 41(1): studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313)h is the subject being studied by the object <a href="https://github.com/CODESIGN2/Project-Structure">example</a>.
+            PAR is also defined as “a framework for creating knowledge that is rooted in the belief that the most impacted by the research should take the lead in framing the questions, design, methods, analysis and determining what products and actions might be the most useful in affecting change”. Torre, M. E. 2009.
           </p>
         </li>
 
@@ -119,13 +119,13 @@
               Who sets the agenda? 
             </li>
             <li>
-              PAR is not a static process  
+              Change  
             </li>
              <li>
               The role of the researcher/scientist is to be an advisor and a partner 
             </li>
              <li>
-              Reflection 
+              Reflect on 
                - Personal 
                - Epistemological 
                - Research Process 
@@ -133,7 +133,7 @@
             </li>
           </ul>
           <p>
-            <strong>Make a THING</strong>: Provide instructions for whatever is needed to make supporting materials or a more polished version of the draft in step 2
+            <strong>Data Collection</strong>: Provide instructions for whatever is needed to make supporting materials or a more polished version of the draft in step 2
           </p>
         </li>
       </ol>
