--- a/participation/index.html
+++ b/participation/index.html
@@ -62,9 +62,7 @@
         This is a conversation about People, Power, and Knowledge.
       </p>
       <p>
-        It is sometimes best to practice
-        building a markdown file in an offline program like <a href="http://25.io/mou/">Mou</a>
-        or an online one like <a href="http://dillinger.io/">Dilliger</a> before you post it online.
+        Let's start with a video  <a href="https://www.youtube.com/watch?v=6D492AP9JP4">Vera Institute</a>
       </p>
 
       <h2 id="steps-to-complete">Steps to Complete</h2>
