--- a/participation/index.html
+++ b/participation/index.html
@@ -65,14 +65,13 @@
         Let's start with a video  <a href="https://www.youtube.com/watch?v=6D492AP9JP4">Vera Institute</a>
       </p>
 
-      <h2 id="steps-to-complete">Steps to Complete</h2>
+      <h2 id="steps-to-complete">Definition</h2>
       <ol class="steps">
         <!-- Step 1 -->
         <li>
           <h1>Background</h1>
           <p>
-            PAR was born out of furstration PAR was born out of frustration with classical scientific methods and the process of knowledge creation.
-            According to PAR practitioners, the classical scientific method is an elitist model and the r
+            PAR was born out of furstration with classical scientific methods and the process of knowledge creation that fail to give space to local knolwedge. 
           </p>
         </li>
 
