--- a/participation/index.html
+++ b/participation/index.html
@@ -50,14 +50,15 @@
 
       <section class="presentation-details">
         <section>
-          <h4>This conversation is about knowledge, power, and people!</h4>
         </section>
         <section>
         </section>
       </section>
 
       <h2 id="introduction">Introduction</h2>
-
+      <section>
+          <h4>This conversation is about knowledge, power, and people!</h4>
+        </section>
       <p>
         This is a conversation about People, Power, and Knowledge.
       </p>
