--- a/participation/index.html
+++ b/participation/index.html
@@ -115,7 +115,7 @@
              <li>
               Reflect on 
                - Personal 
-               - Epistemological 
+               - Epistemological Foundations
                - Research Process 
                - Structural Limitations 
             </li>
