--- a/participation/index.html
+++ b/participation/index.html
@@ -58,10 +58,7 @@
       <h2 id="introduction">Introduction</h2>
       <section>
           <h4>This conversation is about knowledge, power, and people!</h4>
-        </section>
-      <p>
-        This is a conversation about People, Power, and Knowledge.
-      </p>
+      </section>
       <p>
         Let's start with a video  <a href="https://www.youtube.com/watch?v=6D492AP9JP4">Vera Institute</a>
       </p>
@@ -121,11 +118,13 @@
             </li>
           </ul>
           <p>
-            <strong>Data Collection</strong>: Provide instructions for whatever is needed to make supporting materials or a more polished version of the draft in step 2
+            <strong>Data Collection</strong>: Depends on the day!
           </p>
+          <li>
+            The data is informed by the daily experience of process and the research topic
+            It can range from interviews and focus group, questionnairs, photography projects, artistic work, music,
         </li>
-      </ol>
-
+   
       <h2 id="glossary">Glossary</h2>
       <section class="glossary">
         <section class="term">
