--- a/participation/index.html
+++ b/participation/index.html
@@ -121,7 +121,7 @@
             <strong>Data Collection</strong>: Depends on the day!
           </p>
           <li>
-            The data is informed by the daily experience of process and the research topic
+            The data is informed by the daily experience of process and the research topic. 
             It can range from interviews and focus group, questionnairs, photography projects, artistic work, music,
         </li>
    
