--- a/participation/index.html
+++ b/participation/index.html
@@ -129,7 +129,7 @@
       <section class="glossary">
         <section class="term">
           <h3>Term-to-Define</h3>
-          <p>Some definition of that term.</p>
+          <p>Participation .</p>
         </section>
         <section class="term">
           <h3>Term-to-Define-2</h3>
@@ -148,7 +148,9 @@
       </ul>
 
       <h2>Credits &amp; Attribution</h2>
-      <p>This is any kudos or contributions you'd like to acknowledge</p>
+      <p>Babbie, E. R. (2012). The Practice of Social Research, 13th Edition (13th edition). Belmont, Calif: Wadsworth Publishing.
+      Fals-Borda, O., and Rahman, M. A. (1991). Action and Knowledge: Breaking the Monopoly With Participatory Action Research. New York; London: Rowman and Littlefield Publishers.
+</p>
 
       <!--
       <section class="resources">
