--- a/participation/index.html
+++ b/participation/index.html
@@ -63,7 +63,7 @@
         Let's start with a video  <a href="https://www.youtube.com/watch?v=6D492AP9JP4">Vera Institute</a>
       </p>
 
-      <h2 id="steps-to-complete">Definition</h2>
+      <h2 id="Definition">Definition</h2>
       <ol class="steps">
         <!-- Step 1 -->
         <li>
