--- a/participation/index.html
+++ b/participation/index.html
@@ -124,19 +124,6 @@
             The data is informed by the daily experience of process and the research topic. 
             It can range from interviews and focus group, questionnairs, photography projects, artistic work, music,
         </li>
-   
-      <h2 id="glossary">Glossary</h2>
-      <section class="glossary">
-        <section class="term">
-          <h3>Term-to-Define</h3>
-          <p>Participation .</p>
-        </section>
-        <section class="term">
-          <h3>Term-to-Define-2</h3>
-          <p>Some definition of another term.</p>
-        </section>
-      </section>
-
       <h2 id="resources">Follow-up Resources &amp; Materials</h2>
       <ul>
         <li>
@@ -151,6 +138,8 @@
       <p>Babbie, E. R. (2012). The Practice of Social Research, 13th Edition (13th edition). Belmont, Calif: Wadsworth Publishing.
       
         Fals-Borda, O., and Rahman, M. A. (1991). Action and Knowledge: Breaking the Monopoly With Participatory Action Research. New York; London: Rowman and Littlefield Publishers.
+        
+        <strong>Criticisms of PAR</strong>:
 </p>
 
       <!--
