--- a/participation/index.html
+++ b/participation/index.html
@@ -69,7 +69,7 @@
         <li>
           <h1>Background</h1>
           <p>
-            PAR was born out of furstration with classical scientific methods and the process of knowledge creation that fail to give space to local knolwedge. 
+            PAR was born out of frustration with classical scientific methods and the process of knowledge creation that fail to give space to local knowledge. 
           </p>
         </li>
 
@@ -88,14 +88,14 @@
 
         <!-- Step 3 -->
         <li>
-          <h1>Practicing PAR - the mimimums</h1>
+          <h1>Practicing PAR - the minimum</h1>
           <!-- <time>30 minutes</time> -->
           <ul>
             <li>
               A democratic setting - social and political conditions 
             </li>
             <li>
-              A Safe Space - it's a continious negotiation process 
+              A Safe Space - it's a continuous negotiation process 
             </li>
             <li>
               Who joins the group? 
@@ -122,7 +122,7 @@
           </p>
           <li>
             The data is informed by the daily experience of process and the research topic. 
-            It can range from interviews and focus group, questionnairs, photography projects, artistic work, music,
+            It can range from interviews and focus group, questionnaires, photography projects, artistic work, music,
         </li>
       <h2 id="resources">Follow-up Resources &amp; Materials</h2>
       <ul>
