--- a/participation/index.html
+++ b/participation/index.html
@@ -79,7 +79,7 @@
           <!-- you can add tim limitations to each step with the notation below -->
           <!-- <time>3 minutes each</time> -->
           <p>
-            “PAR is an approach to social research in which the people being studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie page 313).
+            “PAR is an approach to social research in which the people being studied are given control over the purpose and procedures of the research; intended as a counter to the implicit view that researchers are superior to those they study” (Babbie).
           </p>
           <p>
             PAR is also defined as “a framework for creating knowledge that is rooted in the belief that the most impacted by the research should take the lead in framing the questions, design, methods, analysis and determining what products and actions might be the most useful in affecting change”. Torre, M. E. 2009.
